# Python-Menu

./: README.md  createtask.md  infodb.py  main.py  notes.md  palindrome.py  pyproject.toml  quizcorrections2.md  quizcorrections3.md  sample.py  testcorrections.md  tree.py
docs/: index.md  notes.md
week 0/: boat.py  matrix.py  sample.py  tree.py
week 1/: fibonacci.py  infodb.py  sqaure.py
week 2/: factorial_class.py  mathy.py  palindrome.py
week 3/: Script for Video
week0/: matrix.py
week1/: fibonacci.py  infodb.py
week2/: factorial_class.py  hangman.py  mathy.py
